# kanyequotes

./: README.md  kanye.py  pyproject.toml  quotes.txt
src/kanye/: __init__.py  main.py
